--- a/src/app/user-result-page/user-result-page.component.html
+++ b/src/app/user-result-page/user-result-page.component.html
@@ -1,18 +1,26 @@
 <div class="container-fluid main-container">
   <app-navigation-bar></app-navigation-bar>
   <!-- User card -->
-  <div class="container row mt-5 align-items-center">
+  <div class="container-fluid row mt-5 align-items-center">
     <div class="col-md-6 d-flex flex-column align-items-center justify-content-center">
       <div class="holder rounded-circle mb-3"></div>
       <button class="btn btn-outline-success first-buttons">View Profile</button>
     </div>
     <div class="col-md-6">
-      <p class="h5">Hanan Hussein</p>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, dignissimos.
+      <p class="h4">Hanan Hussein</p>
+      <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, dignissimos.
         Exercitationem voluptas atque veritatis deleniti perferendis eveniet harum ipsum magni!
         Ad eos error a nobis veniam omnis provident ipsam cumque!
         Qui ea sint, iure distinctio quia quasi cum iste quis.
         Recusandae molestias quidem ab ullam facilis deleniti! Quasi, laudantium expedita!</p>
+      <div class="stats d-flex justify-content-between">
+        <p><span class="numbers">10</span> Followers</p>
+        <p><span class="numbers">20</span> Following</p>
+        <p><span class="numbers">45</span> Public Repositories</p>
+      </div>
+      <p class="text-muted">Member since <span>2018</span></p>
     </div>
+    <!-- Repositories Section -->
+    
   </div>
 </div>
