ft:repository skeleton - created the skeleton of the repo

--- a/src/app/user-result-page/user-result-page.component.html
+++ b/src/app/user-result-page/user-result-page.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid main-container">
   <app-navigation-bar></app-navigation-bar>
   <!-- User card -->
-  <div class="container-fluid row mt-5 align-items-center">
+  <div class="container-fluid row my-5 align-items-center">
     <div class="col-md-6 d-flex flex-column align-items-center justify-content-center">
       <div class="holder rounded-circle mb-3"></div>
       <button class="btn btn-outline-success first-buttons">View Profile</button>
@@ -18,9 +18,19 @@
         <p><span class="numbers">20</span> Following</p>
         <p><span class="numbers">45</span> Public Repositories</p>
       </div>
-      <p class="text-muted">Member since <span>2018</span></p>
+      <p class="text-muted mb-3">Member since <span>2018</span></p>
     </div>
-    <!-- Repositories Section -->
-    
+  </div>
+  <!-- Repositories Section -->
+  <p class="h5 text-center mt-5">Latest Repositories</p>
+  <div class="container repositories-section ">
+      <div class="repository my-3 p-5 d-flex align-items-center justify-content-between text-center">
+        <p class="repo-name"><span>Akan Names</span> Project</p>
+        <div class="d-flex justify-content-around">
+           <p class="repo-info text-center h-5 p-3 mx-5"><span>3</span> Forks</p>
+           <p class="repo-info text-center h-5 p-3 mx-5"><span>3</span> Watchers</p>
+           <p class="repo-info text-center h-5 p-3 mx-5"><span>3</span> Stars</p>
+        </div>
+      </div>
   </div>
 </div>
