--- a/src/app/user-result-page/user-result-page.component.css
+++ b/src/app/user-result-page/user-result-page.component.css
@@ -17,3 +17,17 @@
 .text-muted{
   color: #0096C7 !important;
 }
+/* Repository sections */
+.repository{
+  width: 100%;
+  height: 12vh;
+  background-color: #0077B6;
+}
+.repo-info{
+  background-color: #CAF0F8;
+  width: 10vw;
+  color: #000000;
+}
+.repo-name{
+  color: #FFFFFF;
+}
