ft:repositories - created the repo component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
-<app-user-result-page></app-user-result-page>
+<!-- <app-user-result-page></app-user-result-page> -->
 <!-- <app-landing-page></app-landing-page> -->
+<app-repositories></app-repositories>
