--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -8,14 +8,17 @@
       <p class="display-3 mt-5">Github Search</p>
     </div>
     <form action="">
-      <input type="text" class="form-control p-3 my-5 input-space" placeholder="search users,repos ... ">
-      <img src="../../assets/Union.svg" alt="" class="m-glass">
-      <div class="form-group d-flex justify-content-center">
+      <div class="form-group search-space">
+        <input type="text" class="form-control p-3 input-space me-5 " placeholder="search users,repos ... ">
+        <button>
+          <img src="../../assets/Union.svg" class="search-image" alt="">
+        </button>
+      </div>
+      <div class="form-group d-flex justify-content-center mt-5">
         <button class="btn btn-outline-success me-3 first-buttons">Users</button>
         <button class="btn btn-outline-success first-buttons">Repositories</button>
       </div>
     </form>
     <img src="../../assets/botttom-right.svg" class="bottom-right" alt="">
   </div>
-  
 </div>
