ft:added routing for the pages

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
-<app-user-result-page></app-user-result-page>
+<!-- <app-user-result-page></app-user-result-page> -->
 <!-- <app-landing-page></app-landing-page> -->
 <!-- <app-repositories></app-repositories> -->
+<router-outlet></router-outlet>
