--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -9,14 +9,14 @@
     </div>
     <form action="">
       <div class="form-group search-space">
-        <input type="text" class="form-control p-3 input-space me-5 " placeholder="search users,repos ... ">
-        <button>
+        <input type="text" class="form-control p-3 input-space me-5 " placeholder="search users,repos ... " name="inputData" [(ngModel)] ='inputData' >
+        <button disabled>
           <img src="../../assets/Union.svg" class="search-image" alt="">
         </button>
       </div>
       <div class="form-group d-flex justify-content-center mt-5">
-        <button class="btn btn-outline-success me-3 first-buttons">Users</button>
-        <button class="btn btn-outline-success first-buttons">Repositories</button>
+        <button (click)="userSearch()" class="btn btn-outline-success me-3 first-buttons">Users</button>
+        <button (click)="repoSearch()" class="btn btn-outline-success first-buttons">Repositories</button>
       </div>
     </form>
     <img src="../../assets/botttom-right.svg" class="bottom-right" alt="">
