--- a/src/app/user-result-page/user-result-page.component.html
+++ b/src/app/user-result-page/user-result-page.component.html
@@ -7,16 +7,12 @@
       <button class="btn btn-outline-success first-buttons">View Profile</button>
     </div>
     <div class="col-md-6">
-      <p class="h4">Hanan Hussein</p>
-      <p class="lead">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, dignissimos.
-        Exercitationem voluptas atque veritatis deleniti perferendis eveniet harum ipsum magni!
-        Ad eos error a nobis veniam omnis provident ipsam cumque!
-        Qui ea sint, iure distinctio quia quasi cum iste quis.
-        Recusandae molestias quidem ab ullam facilis deleniti! Quasi, laudantium expedita!</p>
+      <p class="h4">{{name}}</p>
+      <p class="lead">{{bio}}</p>
       <div class="stats d-flex justify-content-between">
-        <p><span class="numbers">10</span> Followers</p>
-        <p><span class="numbers">20</span> Following</p>
-        <p><span class="numbers">45</span> Public Repositories</p>
+        <p><span class="numbers">{{followers}}</span> Followers</p>
+        <p><span class="numbers">{{following}}</span> Following</p>
+        <p><span class="numbers">{{publicRepositories}}</span> Public Repositories</p>
       </div>
       <p class="text-muted mb-3">Member since <span>2018</span></p>
     </div>
