--- a/src/app/user-result-page/user-result-page.component.html
+++ b/src/app/user-result-page/user-result-page.component.html
@@ -1,18 +1,18 @@
 <div class="container-fluid main-container">
   <app-navigation-bar></app-navigation-bar>
   <!-- User card -->
-  <div class="container-fluid row my-5 align-items-center" >
+  <div class="container-fluid row my-5 align-items-center" *ngFor="let detail of user" >
     <div class="col-md-6 d-flex flex-column align-items-center justify-content-center">
-      <div class="holder rounded-circle mb-3"></div>
-      <button class="btn btn-outline-success first-buttons">View Profile</button>
+      <div style.background-image="url('{{detail.image}}')" class="holder rounded-circle mb-3"></div>
+      <button (click)="redirection(detail.htmlURL)" class="btn btn-outline-success first-buttons">View Profile</button>
     </div>
     <div class="col-md-6">
-      <p class="h4">{{name}}</p>
-      <p class="lead">{{bio}}</p>
+      <p class="h4">{{detail.name}}</p>
+      <p class="lead">{{detail.bio}}</p>
       <div class="stats d-flex justify-content-between">
-        <p><span class="numbers">{{followers}}</span> Followers</p>
-        <p><span class="numbers">{{following}}</span> Following</p>
-        <p><span class="numbers">{{publicRepositories}}</span> Public Repositories</p>
+        <p><span class="numbers">{{detail.followers}}</span> Followers</p>
+        <p><span class="numbers">{{detail.following}}</span> Following</p>
+        <p><span class="numbers">{{detail.publicRepositories}}</span> Public Repositories</p>
       </div>
       <p class="text-muted mb-3">Member since <span>2018</span></p>
     </div>
