--- a/src/app/user-result-page/user-result-page.component.html
+++ b/src/app/user-result-page/user-result-page.component.html
@@ -1,14 +1,16 @@
 <div class="container-fluid main-container">
   <app-navigation-bar></app-navigation-bar>
   <!-- User card -->
-  <div class="container-fluid row my-5 align-items-center" *ngFor="let detail of user" >
+  <div class="container-fluid row my-5 align-items-center" *ngFor="let detail of user">
     <div class="col-md-6 d-flex flex-column align-items-center justify-content-center">
       <div style.background-image="url('{{detail.image}}')" class="holder rounded-circle mb-3"></div>
+      <p>{{detail.location}}</p>
       <button (click)="redirection(detail.htmlURL)" class="btn btn-outline-success first-buttons">View Profile</button>
     </div>
     <div class="col-md-6">
       <p class="h4">{{detail.name}}</p>
       <p class="lead">{{detail.bio}}</p>
+      <p>{{detail.email}}</p>
       <div class="stats d-flex justify-content-between">
         <p><span class="numbers">{{detail.followers}}</span> Followers</p>
         <p><span class="numbers">{{detail.following}}</span> Following</p>
@@ -19,14 +21,14 @@
   </div>
   <!-- Repositories Section -->
   <p class="h5 text-center mt-5">Latest Repositories</p>
-  <div class="container repositories-section ">
-      <div class="repository my-3 p-5 d-flex align-items-center justify-content-between text-center">
-        <p class="repo-name"><span>Akan Names</span> Project</p>
-        <div class="d-flex justify-content-around">
-           <p class="repo-info text-center h-5 p-3 mx-5"><span>3</span> Forks</p>
-           <p class="repo-info text-center h-5 p-3 mx-5"><span>3</span> Watchers</p>
-           <p class="repo-info text-center h-5 p-3 mx-5"><span>3</span> Stars</p>
-        </div>
+  <div class="container repositories-section " *ngFor="let repo of repo">
+    <div class="repository my-3 p-5 d-flex align-items-center justify-content-between text-center">
+      <p class="repo-name"><span>{{repo.name}}</span> Project</p>
+      <div class="d-flex justify-content-around">
+        <p class="repo-info text-center h-5 p-3 mx-5"><span>{{repo.forks}}</span> Forks</p>
+        <p class="repo-info text-center h-5 p-3 mx-5"><span>{{repo.watchers}}</span> Watchers</p>
+        <p class="repo-info text-center h-5 p-3 mx-5"><span>{{repo.stargazers}}</span> Stars</p>
       </div>
+    </div>
   </div>
 </div>
