ft:fixed the working of the nav-bar

--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -8,12 +8,12 @@
 
   <form action="" class="container d-flex align-items-center justify-content-start my-4">
     <div class="form-group search-space">
-      <input type="text" class="form-control p-2 input-space me-5 " placeholder="search users,repos ... ">
+      <input type="text" class="form-control p-2 input-space me-5 " placeholder="search users,repos ... " name="inputData" [(ngModel)]="inputData">
       <button>
         <!-- <ion-icon name=search-outline"></ion-icon> -->
         <img src="../../assets/Union.svg" class="search-image" alt="">
       </button>
     </div>
-    <button class="btn btn-outline-success me-5 first-buttons ms-5 ">Users</button>
-    <button class="btn btn-outline-success first-buttons">Repositories</button>
+    <button (click)="userSearch()" class="btn btn-outline-success me-5 first-buttons ms-5 ">Users</button>
+    <button (click)="repoSearch()"  class="btn btn-outline-success first-buttons">Repositories</button>
   </form>
