ft:routings - fixed all the routings in the app

--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -15,5 +15,6 @@
       </button>
     </div>
     <button (click)="userSearch()" class="btn btn-outline-success me-5 first-buttons ms-5 ">Users</button>
-    <button (click)="repoSearch()"  class="btn btn-outline-success first-buttons">Repositories</button>
+    <button (click)="repoSearch()"  class="btn btn-outline-success first-buttons me-5" >Repositories</button>
+    <img src="../../assets/home-outline.svg" class="home ms-5" alt="" (click)="home()" >
   </form>
