--- a/src/app/error-page/error-page.component.css
+++ b/src/app/error-page/error-page.component.css
@@ -10,3 +10,10 @@
     height: 45vh;
     
 }
+.first-buttons {
+    width: 10vw;
+    border-color: #0096C7;
+    background-color: #0077B6;
+    box-shadow: none;
+    color: #E5E5E5;
+  }
