--- a/src/app/error-page/error-page.component.html
+++ b/src/app/error-page/error-page.component.html
@@ -1,4 +1,4 @@
 <div class="container page">
     <img src="../../assets/7iJR.gif" class = "img" alt="">
-    <button class="btn btn-outline-success m-5">Back Home</button>
+    <button class="btn btn-outline-success m-5 first-buttons" (click)="home()">Back Home</button>
 </div>
