rf:repo page - redisgned the repo page

--- a/src/app/repositories/repositories.component.html
+++ b/src/app/repositories/repositories.component.html
@@ -2,18 +2,23 @@
   <app-navigation-bar></app-navigation-bar>
   <div class="container repos">
     <p class="h5 text-center mt-5">Repositories</p>
-    <div class="container repositories-section ">
-      <div class="repository my-3 p-5 d-flex align-items-center justify-content-between text-center">
-        <div class="container d-flex flex-column align-items-center justify-content-start">
-          <p class="repo-name small"><span>Akan Names</span> Project</p>
-          <p class="small">By <span>Hanan</span></p>
-          <p class="small"><span>4</span> Months Ago </p>
-            
+    <div class="repo-carrier container bg-light p-2">
+      <div class="repo d-flex justify-content-between align-items-center">
+        <div class="left">
+          <p class="lead">Akan Project</p>
+          <p >Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sapiente, laudantium.
+          Sequi temporibus ea dolore inventore perferendis, officia iste quo repudiandae!
+          Quos inventore, at cupiditate omnis similique quidem illum. Dignissimos, dicta?</p>
+          <p class="text-muted">"http://github.com/Jaffar-Hussein/Github-Crawler"</p>
+          <p>By : Hanan Hussein</p>
+          <p class="text-muted"> 4 months ago </p>
+          <p class="viewer text-decoration-underline"><a href="" class="text-decoration-none">VIEW</a></p>
         </div>
-        <div class="d-flex justify-content-around">
-          <p class="repo-info text-center h-5 p-3 mx-5"><span>3</span> Forks</p>
-          <p class="repo-info text-center h-5 p-3 mx-5"><span>3</span> Watchers</p>
-          <p class="repo-info text-center h-5 p-3 mx-5"><span>3</span> Stars</p>
+        <div class="right text-center"> 
+          <p class="floaters p-3 bg-success me-5 ">0 Forks</p>
+          <p class="floaters p-3 bg-success mx-5">0 Forks</p>
+          <p class="floaters p-3 bg-success ms-5">0 Forks</p>
+
         </div>
       </div>
     </div>
