--- a/src/app/repositories/repositories.component.css
+++ b/src/app/repositories/repositories.component.css
@@ -1,17 +1,24 @@
-.repository{
-    width: 100%;
-    height: 12vh;
-    background-color: #0077B6;
-  }
-  .repo-info{
-    background-color: #CAF0F8;
-    width: 10vw;
-    color: #000000;
-  }
-  .repo-name{
-    color: #FFFFFF;
-  }
-  .small{
-    color: #FFFFFF !important;
-    font-size: x-small;
-  }
+.left{
+  width: 45%;
+}
+.repo{
+  position: relative;
+}
+.viewer{
+  position: absolute;
+  right: 1vh;
+  top: 1vh;
+}
+.floaters{
+  width: 15%;
+  height: 15%;
+}
+.right{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 55%;
+}
+.viewer a{
+  text-decoration: none !important;
+}
