ft:pipe-created a custom pipe to transform the dates to months

--- a/src/app/repositories/repositories.component.html
+++ b/src/app/repositories/repositories.component.html
@@ -9,7 +9,7 @@
           <p class="desc">{{rep.description}}</p>
           <p class="text-muted">{{rep.cloneURL}}</p>
           <p>By : {{rep.author}}</p>
-          <p class="text-muted"> {{rep.created_at}} </p>
+          <p class="text-muted"> {{rep.created_at|monthCounter}} </p>
           <p class="viewer text-decoration-underline"><a href={{rep.htmlURL}} target="_black" class="link-secondary">VIEW</a></p>
         </div>
         <div class="right text-center"> 
