ft:bg-form-validation bug in the process but will be squashed soon

--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -1,7 +1,7 @@
   <!-- Navigation bar -->
   <div class=" container navigation-bar mt-3">
     <div class="title d-flex align-items-end">
-      <img src="../../assets/github-one.svg" class="github-one d-inline" alt="">
+      <img src="../../assets/github-one.svg" class="github-one d-inline" (click)="home()" alt="">
       <p class="h4 d-inline ms-4 second-title">Github Search</p>
     </div>
   </div>
