pt:minor bug patched preventing opening of new tabs

--- a/src/app/repositories/repositories.component.html
+++ b/src/app/repositories/repositories.component.html
@@ -10,7 +10,7 @@
           <p class="text-muted">{{rep.cloneURL}}</p>
           <p>By : {{rep.author}}</p>
           <p class="text-muted"> {{rep.created_at|monthCounter}} </p>
-          <p class="viewer text-decoration-underline"><a href={{rep.htmlURL}} target="_black" class="link-secondary">VIEW</a></p>
+          <p class="viewer text-decoration-underline"><a href={{rep.htmlURL}} target="_blank" class="link-secondary">VIEW</a></p>
         </div>
         <div class="right text-center"> 
           <p class="floaters p-3 bg-success me-5 ">{{rep.forks}} Forks</p>
