rf:styling- refactored code to one style sheet

--- a/src/app/user-result-page/user-result-page.component.html
+++ b/src/app/user-result-page/user-result-page.component.html
@@ -9,6 +9,8 @@
     </div>
     <div class="col-md-6">
       <p class="h4">{{detail.name}}</p>
+      <p class="desc">{{detail.description}}</p>
+
       <p class="lead">{{detail.bio}}</p>
       <p>{{detail.email}}</p>
       <div class="stats d-flex justify-content-between">
