--- a/src/styles.css
+++ b/src/styles.css
@@ -13,3 +13,128 @@
     box-shadow: none;
     color:#E5E5E5;
 }
+.left {
+    width: 45%;
+  }
+  
+  .repo {
+    position: relative;
+  
+  }
+  
+  .viewer {
+    position: absolute;
+    right: 1vh;
+    top: 1vh;
+  }
+  
+  .floaters {
+    max-width: fit-content;
+    height: 15%;
+    background-color: #CAF0F8;
+  }
+  
+  .desc {
+    max-height: 13vh;
+    overflow: auto;
+  }
+  
+  .floater {
+    max-width: fit-content;
+    background-color: #CAF0F8;
+  
+    height: 15%;
+  }
+  
+  .right {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 55%;
+  }
+  
+  .viewer a {
+    text-decoration: none !important;
+  }
+  
+  .repo-carrier {
+    border: 1px solid #0096C7;
+  }
+  .link{
+    color: black;
+    text-decoration: none;
+  }
+  
+  .repo-carrier:hover {
+    transform: scale(1.05);
+    background-color: #0077B6;
+    border: none;
+    transition: transform 1.05s ease;
+    color: #FFFFFF;
+    box-shadow: 0px 8px 4px rgba(0,0,0,0.2);
+    padding: 10px;
+  }
+  
+  /* .repo-carrier:hover repo:not(:hover) {
+    filter: blur(50%);
+    color: transparent;
+    text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  } */
+  .page{
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    flex-direction: column;
+}
+.page img{
+    height: 45vh;
+    
+}
+  /* NAvigation bar styling */
+.github-one {
+    width: 3vw;
+  }
+  
+  .form-control input {
+    width: fit-content;
+    display: flex;
+  }
+  
+  .input-space {
+    width: 45vw;
+    border-radius: 10vw;
+    
+    border: 1px solid #0077B6;
+    box-shadow: none;
+    display: block;
+ 
+  }
+  
+  .second-title{
+    color: #03045E;
+}
+.search-space{
+    position: relative;
+    width: 45vw;
+}
+.search-space button{
+    position: absolute;
+    background: transparent;
+    border: none;
+    right: 1vw;
+    top: 1vh;
+    
+}
+.search-image{
+    height: 3vh;
+}
+.home{
+  height: 5vh;
+  margin-right:5vw;
+  cursor:pointer;
+}
+.first-buttons:hover{
+    background-color: #0077B6;
+}
