ft:custom-directive-

--- a/src/app/user-result-page/user-result-page.component.html
+++ b/src/app/user-result-page/user-result-page.component.html
@@ -22,7 +22,7 @@
     </div>
   </div>
   <!-- Repositories Section -->
-  <p class="h5 text-center mt-5">Latest Repositories</p>
+  <p class="h5 text-center mt-5" appUnknownSearch>Latest Repositories</p>
   <div class="container repositories-section " *ngFor="let repo of repo">
     <div class="repository my-3 p-5 d-flex align-items-center justify-content-between text-center">
       <p class="repo-name"><span>{{repo.name}}</span> Project</p>
