--- a/src/app/repositories/repositories.component.html
+++ b/src/app/repositories/repositories.component.html
@@ -1,7 +1,7 @@
 <div class="main-container">
   <app-navigation-bar></app-navigation-bar>
   <div class="container repos" >
-    <p class="h5 text-center mt-5">Repositories</p>
+    <p class="h5 text-center mt-5" appUnknownSearch>Repositories</p>
     <div class="repo-carrier container  p-2 my-2" *ngFor="let rep of repos">
       <div class="repo d-flex justify-content-between align-items-center">
         <div class="left">
