--- a/src/styles.css
+++ b/src/styles.css
@@ -1,140 +1,204 @@
 /* You can add global styles to this file, and also import other style files */
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    font-family: 'Century Gothic';
-    
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  font-family: 'Century Gothic';
+
 }
-.first-buttons{
-    width: 10vw;
-    border-color: #0096C7;
-    background-color: #0077B6;
-    box-shadow: none;
-    color:#E5E5E5;
+
+.first-buttons {
+  width: 10vw;
+  border-color: #0096C7;
+  background-color: #0077B6;
+  box-shadow: none;
+  color: #E5E5E5;
 }
+
 .left {
-    width: 45%;
-  }
-  
-  .repo {
-    position: relative;
-  
-  }
-  
-  .viewer {
-    position: absolute;
-    right: 1vh;
-    top: 1vh;
-  }
-  
-  .floaters {
-    max-width: fit-content;
-    height: 15%;
-    background-color: #CAF0F8;
-  }
-  
-  .desc {
-    max-height: 13vh;
-    overflow: auto;
-  }
-  
-  .floater {
-    max-width: fit-content;
-    background-color: #CAF0F8;
-  
-    height: 15%;
-  }
-  
-  .right {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 55%;
-  }
-  
-  .viewer a {
-    text-decoration: none !important;
-  }
-  
-  .repo-carrier {
-    border: 1px solid #0096C7;
-  }
-  .link{
-    color: black;
-    text-decoration: none;
-  }
-  
-  .repo-carrier:hover {
-    transform: scale(1.05);
-    background-color: #0077B6;
-    border: none;
-    transition: transform 1.05s ease;
-    color: #FFFFFF;
-    box-shadow: 0px 8px 4px rgba(0,0,0,0.2);
-    padding: 10px;
-  }
-  
-  /* .repo-carrier:hover repo:not(:hover) {
+  width: 45%;
+}
+
+.repo {
+  position: relative;
+
+}
+
+.viewer {
+  position: absolute;
+  right: 1vh;
+  top: 1vh;
+}
+
+.floaters {
+  max-width: fit-content;
+  height: 15%;
+  background-color: #CAF0F8;
+}
+
+.desc {
+  max-height: 13vh;
+  overflow: auto;
+}
+
+.floater {
+  max-width: fit-content;
+  background-color: #CAF0F8;
+
+  height: 15%;
+}
+
+.right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 55%;
+}
+
+.viewer a {
+  text-decoration: none !important;
+}
+
+.repo-carrier {
+  /* border: 1px solid #0096C7; */
+  background-color: whitesmoke;
+}
+
+.link {
+  color: black;
+  text-decoration: none;
+}
+
+.repo-carrier:hover,
+.repositories-section:hover {
+  transform: scale(1.05);
+  background-color: #0077B6;
+  border: none;
+  transition: transform 1.05s ease;
+  color: #FFFFFF;
+  box-shadow: 0px 8px 4px rgba(0, 0, 0, 0.2);
+  padding: 10px;
+}
+
+/* .repo-carrier:hover repo:not(:hover) {
     filter: blur(50%);
     color: transparent;
     text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
   } */
-  .page{
-    height: 100vh;
-    width: 100vw;
-    display: flex;
-    align-items: center;
-    justify-content: flex-start;
-    flex-direction: column;
+.page {
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  flex-direction: column;
 }
-.page img{
-    height: 45vh;
-    
+
+.page img {
+  height: 45vh;
+
 }
-  /* NAvigation bar styling */
+
+/* NAvigation bar styling */
 .github-one {
-    width: 3vw;
-  }
-  
-  .form-control input {
-    width: fit-content;
-    display: flex;
-  }
-  
-  .input-space {
-    width: 45vw;
-    border-radius: 10vw;
-    
-    border: 1px solid #0077B6;
-    box-shadow: none;
-    display: block;
- 
-  }
-  
-  .second-title{
-    color: #03045E;
+  width: 3vw;
 }
-.search-space{
-    position: relative;
-    width: 45vw;
+
+.form-control input {
+  width: fit-content;
+  display: flex;
 }
-.search-space button{
-    position: absolute;
-    background: transparent;
-    border: none;
-    right: 1vw;
-    top: 1vh;
-    
+
+.input-space {
+  width: 45vw;
+  border-radius: 10vw;
+  background: transparent;
+  border: 1px solid #0077B6;
+  box-shadow: none;
+  display: block;
+
 }
-.search-image{
-    height: 3vh;
+
+.input-space:focus {
+  box-shadow: none;
 }
-.home{
+
+.second-title {
+  color: #03045E;
+}
+
+.search-space {
+  position: relative;
+  width: 45vw;
+}
+
+.search-space button {
+  position: absolute;
+  background: transparent;
+  border: none;
+  right: 1vw;
+  top: 1vh;
+
+}
+
+.search-image {
+  height: 3vh;
+}
+
+.home {
   height: 5vh;
-  margin-right:5vw;
-  cursor:pointer;
+  margin-right: 5vw;
+  cursor: pointer;
 }
-.first-buttons:hover{
-    background-color: #0077B6;
+
+.btn-outline-success:hover,
+.btn-outline-success:focus,
+.btn-outline-success:active {
+  color: #fff;
+  background-color: #0077B6 !important;
+  border-color: transparent;
+  outline: none;
+  box-shadow: none;
+}
+
+.numbers {
+  color: #0077B6;
+}
+
+/* .user-image{
+  width: 10vw;
+  border-radius: %;
+} */
+.holder {
+  /* background-image: url(""); */
+  height: 30vh;
+  width: 30vh;
+  background-size: cover;
+  background-repeat: no-repeat;
+}
+
+.text-muted {
+  color: #0096C7 !important;
+}
+
+/* Repository sections */
+.repository {
+  width: 100%;
+  height: 12vh;
+  /* background-color: whitesmoke; */
+}
+
+.repo-info {
+  background-color: #CAF0F8;
+  width: 10vw;
+  color: #000000;
+}
+
+/* .repo-name {
+  color: #FFFFFF;
+} */
+
+.repositories-section {
+  background-color: whitesmoke;
+  color: #000000;
 }
