--- a/src/app/user-result-page/user-result-page.component.html
+++ b/src/app/user-result-page/user-result-page.component.html
@@ -24,8 +24,13 @@
   <!-- Repositories Section -->
   <p class="h5 text-center mt-5" appUnknownSearch>Latest Repositories</p>
   <div class="container repositories-section " *ngFor="let repo of repo">
-    <div class="repository my-3 p-5 d-flex align-items-center justify-content-between text-center">
-      <p class="repo-name"><span>{{repo.name}}</span> Project</p>
+    <div class="repository my-3 p-2 d-flex align-items-center justify-content-between text-center">
+      <div class="d-flex flex-column align-items-start">
+        <p class="repo-name h6"><span>{{repo.name}}</span> Project</p>
+        <p>{{repo.description}}</p>
+        <p class="text-muted">{{repo.htmlURL}}</p>
+      </div>
+     
       <div class="d-flex justify-content-around">
         <p class="repo-info text-center h-5 p-3 mx-5"><span>{{repo.forks}}</span> Forks</p>
         <p class="repo-info text-center h-5 p-3 mx-5"><span>{{repo.watchers}}</span> Watchers</p>
