--- a/src/app/navigation-bar/navigation-bar.component.html
+++ b/src/app/navigation-bar/navigation-bar.component.html
@@ -6,7 +6,7 @@
     </div>
   </div>
 
-  <form action="" class="container d-flex align-items-center justify-content-start my-4">
+  <form action="" class="container nav-container d-flex align-items-center justify-content-start flex-wrap my-4">
     <div class="form-group search-space">
       <input type="text" class="form-control p-2 input-space me-5 " placeholder="search users,repos ... " name="inputData" [(ngModel)]="inputData">
       <button>
