--- a/src/styles.css
+++ b/src/styles.css
@@ -202,3 +202,21 @@
   background-color: whitesmoke;
   color: #000000;
 }
+@media only screen and (max-width:700px){
+  .first-buttons{
+    width: max-content;
+  }
+  .input-space{
+    width: 80vw;
+  }
+  .search-image{
+    display: none;
+  }
+  .nav-container{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+ 
+}
