ft:pipes-date manipulation

--- a/src/app/repositories/repositories.component.html
+++ b/src/app/repositories/repositories.component.html
@@ -10,7 +10,7 @@
             <p class="desc">{{rep.description}}</p>
             <p class="text-muted">{{rep.cloneURL}}</p>
             <p>By : {{rep.author}}</p>
-            <p class="text-muted"> {{rep.created_at|monthCounter}} </p>
+            <p class="text-muted">Created {{rep.created_at|monthCounter}} </p>
             <p class="viewer text-decoration-underline"><a href={{rep.htmlURL}} target="_blank" class="link">VIEW</a>
             </p>
           </div>
