--- a/src/styles.css
+++ b/src/styles.css
@@ -201,7 +201,17 @@
 .repositories-section {
   background-color: whitesmoke;
   color: #000000;
+  position:relative;
+
 }
+.link_user{
+  position: absolute;
+  right: 0;
+  top: 0;
+  color: black!important;
+  text-decoration: none!important;
+}
+
 @media only screen and (max-width:700px){
   .first-buttons{
     width: max-content;
