ft:validation-form validation

--- a/src/app/repositories/repositories.component.html
+++ b/src/app/repositories/repositories.component.html
@@ -26,10 +26,10 @@
     <ng-template #error>
       <div class="container d-flex align-items-center justify-content-center">
         <div class="div">
-          <p class="display-6">Sorry Repo Not Found :(</p>
+          <p class="display-6">Looking for Your Repo</p>
         </div>
         <div class="div">
-          <img src="../../assets/error.gif" alt="">
+          <img src="../../assets/7Iy6.gif" class="looking" alt="">
         </div>
       </div>
     </ng-template>
