--- a/src/styles.css
+++ b/src/styles.css
@@ -211,7 +211,10 @@
   color: black!important;
   text-decoration: none!important;
 }
-
+.userLink{
+  text-decoration: none;
+  color: #000000;
+}
 @media only screen and (max-width:700px){
   .first-buttons{
     width: max-content;
