deployment to heroku

--- a/src/app/landing-page/landing-page.component.html
+++ b/src/app/landing-page/landing-page.component.html
@@ -5,7 +5,7 @@
       <img src="../../assets/github-one.svg" class="github-one" alt="">
     </div>
     <div class="app-title">
-      <p class="display-3 mt-5">Github Search</p>
+      <p class="display-3 mt-5">Github Crawler</p>
     </div>
     <form  #myForm="ngForm" >
       <div class="form-group search-space">
